Rename backend entity Widget to Gadget
